[package]
name = "gnss-protos"
version = "0.0.2"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "GNSS protos encoder and decoder"
homepage = "https://github.com/rtk-rs"
repository = "https://github.com/rtk-rs/gnss-protos"
keywords = ["geo", "gps", "galileo"]
categories = ["science", "science::geo", "parsing"]
edition = "2021"
rust-version = "1.64"

exclude = [
    "data/*",
]

[features]
default = []

# STD support. Currently only used in test mode.
std = []

# Unlock GPS protocol
gps = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[dependencies]
log = { version = "0.4", optional = true }
num-traits = { version = "0.2", default-features = false }

[dev-dependencies]
env_logger = "0.11"
